增加 PictureController